# Dog-Breed-Identification

./: README.md  pyproject.toml  run_project.bat
config/: training_config.yaml
src/dogs_breed_identification/: __init__.py  config.py  data_loader.py  evaluate.py  infer.py  models.py  train.py
src/dogs_breed_identification/utils/: __init__.py  logging_utils.py  metrics.py  seed_utils.py
tests/: test_data_loader.py  test_models.py
